@@ -1,8 +1,10 @@
 package de.mfreund.gentrans.transformation.descriptors;
 
 import java.util.ArrayList;
-import java.util.LinkedList;
+import java.util.Arrays;
+import java.util.HashSet;
 import java.util.List;
+import java.util.Optional;
 import java.util.Set;
 
 import org.eclipse.emf.ecore.EObject;
@@ -26,25 +28,29 @@ public class ContainmentTree {
 	private final List<EObject> sourceModels;
 
 	/**
-	 * This list of {@link EObject EObjects} represents the containment tree of the source model. It therefore stores the elements of
-	 * the source model in hierarchical order.
+	 * This list of {@link EObject EObjects} represents the containment tree of
+	 * the source model. It therefore stores the elements of the source model in
+	 * hierarchical order.
 	 */
-	private final LinkedList<EObject> elements;
+	private final List<EObject> elements;
 
 	/**
-	 * This list keeps track of those of the {@link #elements} that are still available for matching.
+	 * This list keeps track of those of the {@link #elements} that are still
+	 * available for matching.
 	 */
-	private final LinkedList<EObject> availableElements;
+	private final List<EObject> availableElements;
 
 	/**
-	 * This list keeps track of those of the {@link #elements} that have already been matched.
+	 * This list keeps track of those of the {@link #elements} that have already
+	 * been matched.
 	 */
-	private final LinkedList<EObject> matchedElements;
+	private final Set<EObject> matchedElements;
 
 	/**
-	 * This list keeps track of those of the {@link #elements} that could not be matched.
+	 * This list keeps track of those of the {@link #elements} that could not be
+	 * matched.
 	 */
-	private final LinkedList<EObject> unmatchedElements;
+	private final List<EObject> unmatchedElements;
 
 	/**
 	 * This keeps track of the element that is currently evaluated for matching.
@@ -56,17 +62,20 @@ public class ContainmentTree {
 	 */
 	private ContainmentTree() {
 		this.sourceModels = new ArrayList<>();
-		this.elements = new LinkedList<>();
-		this.availableElements = new LinkedList<>();
-		this.matchedElements = new LinkedList<>();
-		this.unmatchedElements = new LinkedList<>();
+		this.elements = new ArrayList<>();
+		this.availableElements = new ArrayList<>();
+		this.matchedElements = new HashSet<>();
+		this.unmatchedElements = new ArrayList<>();
 		this.currentElement = null;
 	}
 
 	/**
-	 * This creates a new instance based on a given {@link EObject sourceModels} and returns it.
+	 * This creates a new instance based on a given {@link EObject sourceModels}
+	 * and returns it.
 	 *
-	 * @param sourceModels The list of {@link EObject EObjects} representing the source models for which the containment tree shall be built.
+	 * @param sourceModels
+	 *            The list of {@link EObject EObjects} representing the source
+	 *            models for which the containment tree shall be built.
 	 * @return The created {@link ContainmentTree}.
 	 */
 	public static ContainmentTree build(List<EObject> sourceModels) {
@@ -79,16 +88,20 @@ public class ContainmentTree {
 			tree.buildContainmentTree(sourceModel);
 		}
 
-		// at the beginning of the matching process, all elements from the containment tree are still 'unmatched'
+		// at the beginning of the matching process, all elements from the
+		// containment tree are still 'unmatched'
 		tree.availableElements.addAll(tree.elements);
 
 		return tree;
 	}
 
 	/**
-	 * This method recursively builds the containment tree by iterating over all child elements of the given <em>modelElement</em>.
+	 * This method recursively builds the containment tree by iterating over all
+	 * child elements of the given <em>modelElement</em>.
 	 *
-	 * @param modelElement The model element for that the containment tree shall be built.
+	 * @param modelElement
+	 *            The model element for that the containment tree shall be
+	 *            built.
 	 */
 	private void buildContainmentTree(final EObject modelElement) {
 
@@ -121,16 +134,18 @@ public class ContainmentTree {
 	}
 
 	/**
-	 * This returns the number of elements in the containment tree that are still available for matching.
+	 * This returns the number of elements in the containment tree that are
+	 * still available for matching.
 	 *
 	 * @return The number of elements that are still available for matching.
 	 */
 	public int getNumberOfAvailableElements() {
-		if(this.availableElements.isEmpty() && this.currentElement != null) {
+		if (this.availableElements.isEmpty() && this.currentElement != null) {
 			/*
-			 *  If this function is called and there are no available elements left, we assume that
-			 *  we have arrived at the end of the matching process. Consequently, the 'current element'
-			 *  should be marked as unmatched if necessary.
+			 * If this function is called and there are no available elements
+			 * left, we assume that we have arrived at the end of the matching
+			 * process. Consequently, the 'current element' should be marked as
+			 * unmatched if necessary.
 			 */
 			this.unmatchedElements.add(this.currentElement);
 			this.currentElement = null;
@@ -139,7 +154,8 @@ public class ContainmentTree {
 	}
 
 	/**
-	 * This returns the number of elements in the containment tree that have already been matched.
+	 * This returns the number of elements in the containment tree that have
+	 * already been matched.
 	 *
 	 * @return The number of elements that have already been matched.
 	 */
@@ -148,7 +164,8 @@ public class ContainmentTree {
 	}
 
 	/**
-	 * This returns the number of elements in the containment tree that could not be matched.
+	 * This returns the number of elements in the containment tree that could
+	 * not be matched.
 	 *
 	 * @return The number of elements that could not be matched.
 	 */
@@ -160,51 +177,53 @@ public class ContainmentTree {
 	/**
 	 * This returns the next element that is still available for matching.
 	 * <p />
-	 * Note: Every element will be returned only once. Consequently, calling this twice will return
-	 * different elements.
+	 * Note: Every element will be returned only once. Consequently, calling
+	 * this twice will return different elements.
 	 *
-	 * @return The next element that is still available for mathcing or '<em>null</em>'
-	 * if there is no next element.
+	 * @return The next element that is still available for matching (the
+	 *         returned optional will be empty if there is no next element).
 	 */
-	public EObject getNextElementForMatching() {
-		if(this.getNumberOfAvailableElements() == 0) {
-			return null;
+	public Optional<EObject> getNextElementForMatching() {
+
+		if (this.getNumberOfAvailableElements() == 0) {
+			return Optional.empty();
 		}
 
 		/*
-		 * if the element that was evaluated for matching has not been marked as matched (and is thus still be marked as
-		 * 'currentElement'), we assume that it could not be matched
+		 * if the element that was evaluated for matching has not been marked as
+		 * matched (and is thus still be marked as 'currentElement'), we assume
+		 * that it could not be matched
 		 */
-		if(this.currentElement != null) {
+		if (this.currentElement != null) {
 			this.unmatchedElements.add(this.currentElement);
 		}
 
-		this.currentElement = this.availableElements.removeFirst();
-		return this.currentElement;
+		this.currentElement = this.availableElements.remove(0);
+		return Optional.of(this.currentElement);
 	}
 
 	/**
-	 * This marks the given element as '<em>matched</em>' and thus adds it to the list of {@link #matchedElements}.
+	 * This marks the given element as '<em>matched</em>' and thus adds it to
+	 * the list of {@link #matchedElements}.
 	 *
-	 * @param element The element to be marked as '<em>matched</em>'.
+	 * @param element
+	 *            The element to be marked as '<em>matched</em>'.
 	 */
 	public void markAsMatched(EObject element) {
-		this.matchedElements.add(element);
-		this.availableElements.remove(element);
-		if(element.equals(this.currentElement)) {
-			this.currentElement = null;
-		}
+		this.markAsMatched(new HashSet<>(Arrays.asList(element)));
 	}
 
 	/**
-	 * This marks the given set of elements as '<em>matched</em>' and thus adds them to the list of {@link #matchedElements}.
+	 * This marks the given set of elements as '<em>matched</em>' and thus adds
+	 * them to the list of {@link #matchedElements}.
 	 *
-	 * @param elements The list of elements to be marked as '<em>matched</em>'.
+	 * @param elements
+	 *            The list of elements to be marked as '<em>matched</em>'.
 	 */
 	public void markAsMatched(Set<EObject> elements) {
 		this.matchedElements.addAll(elements);
 		this.availableElements.removeAll(elements);
-		if(elements.contains(this.currentElement)) {
+		if (elements.contains(this.currentElement)) {
 			this.currentElement = null;
 		}
 	}
